--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "express": "^4.12.4",
     "morgan": "^1.7.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "mocha": "^7.2.0"
+  },
   "scripts": {
-    "test": "npm test",
+    "test": "mocha",
     "start": "node server.js"
   },
   "repository": {
