--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Blogful-api-2020",
   "main": "server.js",
   "dependencies": {
-    "uuid": "^8.1.0",
     "body-parser": "^1.15.2",
+    "cors": "^2.8.5",
     "express": "^4.12.4",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "uuid": "^8.1.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
